---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Binary(
        Binary {
            lhs: I64(
                I64Lit {
                    base: Dec,
                    value: "2",
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            ),
            op: Add,
            rhs: Binary(
                Binary {
                    lhs: Index(
                        Index {
                            lhs: Ident(
                                Ident {
                                    raw: "hello",
                                    span: Span {
                                        start: 4,
                                        end: 9,
                                    },
                                },
                            ),
                            rhs: I64(
                                I64Lit {
                                    base: Dec,
                                    value: "0",
                                    span: Span {
                                        start: 10,
                                        end: 11,
                                    },
                                },
                            ),
                            span: Span {
                                start: 4,
                                end: 12,
                            },
                        },
                    ),
                    op: Mul,
                    rhs: I64(
                        I64Lit {
                            base: Dec,
                            value: "4",
                            span: Span {
                                start: 15,
                                end: 16,
                            },
                        },
                    ),
                    span: Span {
                        start: 4,
                        end: 16,
                    },
                    op_span: Span {
                        start: 13,
                        end: 14,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 16,
            },
            op_span: Span {
                start: 2,
                end: 3,
            },
        },
    ),
)
